--- a/src/components/Button/styles.module.css
+++ b/src/components/Button/styles.module.css
@@ -1,14 +1,20 @@
 .button {
-    width: 9rem;
-    height: 2.6rem;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 7.125rem;
+    height: 2.4375rem;
     border: none;
     background: var(--color-purple);
     border-radius: .75rem;
     
     font-style: normal;
     font-weight: 600;
-    font-size: 14px;
-    line-height: 19px;
-
+    font-size: .875rem;
+    line-height: 1.0625rem;
     color: var(--color-white);
+}
+
+.button:hover {
+    background: #7C91FF;
 }
