--- a/src/components/Sections/TechSection/styles.module.css
+++ b/src/components/Sections/TechSection/styles.module.css
@@ -1,35 +1,38 @@
 .section {
     display: flex;
     flex-direction: column;
-    justify-content: space-around;
     align-items: center;
-    margin-top: 18rem;
-    width: 100%; 
-    max-width: 56.25rem;   
+    gap: 4rem;
+    width: 100%;
+    max-width: 56.25rem;
+    height: 16.4375rem;
 }
 
 .div {
     display: flex;
     flex-direction: column;
-    justify-content: flex-start;
     align-items: flex-start;
-    width: 100%; 
-    max-width: 16.25rem;   
+    justify-content: space-between;
+    width: 100%;
+    max-width: 16.25rem;
+    margin-top: 4rem;
+    gap: 1rem;
 }
 
 .title {
     font-style: normal;
     font-weight: 800;
-    font-size: 40px;
+    font-size: 2.25rem;
+    line-height: 2.75rem;
     color: var(--color-white);
 }
 
-@media (min-width: 769px) { 
+@media (min-width: 769px) {
     .section {
+        flex-wrap: wrap;
         justify-content: space-between;
         align-items: flex-start;
-        width: 100%;
-        margin-top: 4rem;
+        height: 100%;
     }
 
     .div {
