--- a/src/components/ProjectsCard/styles.module.css
+++ b/src/components/ProjectsCard/styles.module.css
@@ -48,7 +48,7 @@
     font-weight: 700;
     font-size: 16px;
     line-height: 30px;
-    color: var(--color-purple);
+    color: var(--color-green);
     text-decoration: none;
 } 
 
