--- a/src/components/Sections/ProjectsSection/styles.module.css
+++ b/src/components/Sections/ProjectsSection/styles.module.css
@@ -4,6 +4,7 @@
     justify-content: space-around;
     align-items: center;
     margin-top: 18rem;
+    margin-bottom: 2rem;
     width: 100%; 
     max-width: 56.25rem;   
 }
