--- a/src/styles/reset.css
+++ b/src/styles/reset.css
@@ -1,5 +1,5 @@
    :root {
-     --color-purple: #6880ff;
+     --color-green: #438556;
      --color-white: #ffffff;
      --color-background: linear-gradient(to bottom, #0c0c0c 0%, #0c0c0c 100%);
    }
