--- a/src/components/Sections/AboutMeSection/styles.module.css
+++ b/src/components/Sections/AboutMeSection/styles.module.css
@@ -5,6 +5,7 @@
       width: 100%;
       max-width: 56.25rem;
       margin-top: 4.5rem;
+      margin-bottom: 4.5rem;
   }
 
   .div {
@@ -15,13 +16,15 @@
       height: 17.5rem;
       width: 100%;
       max-width: 16.25rem;
+      gap: 1.5rem;
   }
 
-  .lorem {
+  .text {
       font-family: 'Inter';
       font-style: normal;
       font-weight: 400;
-      font-size: 1rem;
+      font-size: 0.9rem;
+      line-height: 150%;
       color: var(--color-white);
   }
 
@@ -41,12 +44,13 @@
 
       .div {
           flex-direction: row;
+          align-items: center;
           margin-top: 0rem;
           max-width: 100%;
           height: 13rem;
       }
 
-      .lorem {
+      .text {
           width: 70%;
           font-size: 1rem;
           line-height: 1.875rem;
