--- a/src/components/Sections/BannerSection/styles.module.css
+++ b/src/components/Sections/BannerSection/styles.module.css
@@ -1,71 +1,71 @@
 .section {
-    display: flex;
-    flex-direction: column;
-    justify-content: space-around;
-    align-items: center;
-    margin-top: 2.8rem;
-    max-width: 56.25rem;
-    width: 100%;
-    height: 28rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-around;
+  align-items: center;
+  margin-top: 2.8rem;
+  max-width: 56.25rem;
+  width: 100%;
+  height: 28rem;
 }
 
 .infos {
-    display: flex;
-    flex-direction: column;
-    gap: 20.8px;
-    width: 100%;
-    max-width: 260px;
-    height: 320px;
+  display: flex;
+  flex-direction: column;
+  gap: 20.8px;
+  width: 100%;
+  max-width: 260px;
+  height: 320px;
 }
 
 .user {
-    font-family: 'Poppins';
-    font-style: normal;
-    font-weight: 400;
-    font-size: .9375rem;
-    line-height: 1.125rem;
-    color: var(--color-purple);
+  font-family: "Poppins";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 0.95rem;
+  line-height: 1.125rem;
+  color: var(--color-green);
 }
 
 .title {
-    font-style: normal;
-    font-weight: 800;
-    font-size: 38.4px;
-    line-height: 100%;
-    color: var(--color-white);
+  font-style: normal;
+  font-weight: 800;
+  font-size: 38.4px;
+  line-height: 100%;
+  color: var(--color-white);
 }
 
 .text {
-    font-family: 'Inter';
-    font-style: normal;
-    font-weight: 400;
-    font-size: 14.4px;
-    line-height: 38.4px;
-    color: var(--color-white);
+  font-family: "Inter";
+  font-style: normal;
+  font-weight: 400;
+  font-size: 14.4px;
+  line-height: 38.4px;
+  color: var(--color-white);
 }
 
 .img {
-    width: 16.3556rem;
-    height: 10.745rem
+  width: 19.3619rem;
+  height: 12.5413rem;
 }
 
 @media (min-width: 769px) {
-    .section {
-        flex-direction: row;
-        margin-top: 0;
-        align-items: flex-start;
-        justify-content: space-between;
-        height: 100%;
-    }
+  .section {
+    flex-direction: row;
+    margin-top: 0;
+    align-items: flex-start;
+    justify-content: space-between;
+    height: 100%;
+  }
 
-    .img {
-        width: 27.3619rem;
-        height: 265.6608px;
-    }
+  .img {
+    width: 27.3619rem;
+    height: 265.6608px;
+  }
 
-    .title {
-        font-size: 3rem;
-        line-height: 3.625rem;
-        width: 20rem;
-    }
+  .title {
+    font-size: 2.5rem;
+    line-height: 3.625rem;
+    width: 20rem;
+  }
 }
